# creditcard_statements_analyzer

./: .gitignore  README.md  chat_gpt_api.py  extract_text_from_pdf.py  main.py  pyproject.toml  quick_analysis.ipynb
